Initial working drag-drop to change position

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,9 @@
     .checkbox .checked {
       text-decoration:line-through;
     }
+    .drag-helper, .drag-helper * {
+      background-color: #f9fafb !important;
+    }
   </style>
 
   <script data-main="/static/js/app" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.min.js"></script>
