--- a/templates/index.html
+++ b/templates/index.html
@@ -60,12 +60,16 @@
     </div>
   </script>
 
+  <script type="text/template" id="todo-list-header-template">
+    <h1>Todos <small><%- id %></small></h1>
+
+  </script>
+
   <script type="text/template" id="todo-list-template">
     <div id="todo-list" class="app-container container-fluid">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
           <header>
-            <h1>Todos</h1>
           </header>
 
           <form id="add-new-todo" class="form-inline row">
