Make done items greyer

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
     }
     .checkbox .checked {
       text-decoration:line-through;
+      color: #aaa;
     }
     .drag-helper, .drag-helper * {
       background-color: #f9fafb !important;
