Fix todo header template issue

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,14 +63,13 @@
 
   <script type="text/template" id="todo-list-header-template">
     <h1>Todos <small><%- id %></small></h1>
-
   </script>
 
   <script type="text/template" id="todo-list-template">
     <div id="todo-list" class="app-container container-fluid">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
-          <header>
+          <header id="todo-header">
           </header>
 
           <form id="add-new-todo" class="form-inline row">
