--- a/templates/index.html
+++ b/templates/index.html
@@ -136,5 +136,11 @@
       </div>
     </div>
   </script>
+
+  {% if prerendered_list %}
+  <script type="text/prerender" id="prerendered-list">
+  {{prerendered_list|safe}}
+  </script>
+  {% endif %}
 </body>
 </html>
